// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePasswordView renders ChangePasswordView with desktop view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-UblHX ZlAPB"
      >
        <div
          class="sc-fufdwm eMJCuP"
        >
          <div
            class="sc-Rjrgp eCIyui"
          >
            <div
              class="sc-blHHSb kTKyqX"
              style="font-weight: 600;"
            >
              Change password
            </div>
            <div
              class="sc-egkSDF cGFidm"
            >
              Please enter your new password to change
            </div>
          </div>
          <div
            class="sc-gtLWhw jPWJOW"
          >
            You are login as
             
            <div
              class="sc-gtLWhw jPWJOW"
              style="font-weight: bold; white-space: pre-wrap; overflow-wrap: break-word;"
            >
              email
            </div>
          </div>
        </div>
        <div
          style="margin-bottom: 12px; margin-top: 40px;"
        >
          <div
            class="sc-gtLWhw jPWJOW"
          >
            New password
          </div>
          <input
            aria-label="New password"
            class="sc-kLhKbu gjDzjv"
            placeholder="Enter your password..."
            style="min-width: 200px; border: 1px solid #858585; background-color: rgb(254, 254, 255); max-width: 320px; width: 80vw;"
            type="password"
            value="123"
          />
        </div>
        <div
          style="margin-bottom: 12px;"
        >
          <div
            class="sc-gtLWhw jPWJOW"
          >
            Confirm new password
          </div>
          <input
            aria-label="Confirm new password"
            class="sc-kLhKbu gjDzjv"
            placeholder="Enter your password..."
            style="min-width: 200px; border: 1px solid #858585; background-color: rgb(254, 254, 255); max-width: 320px; width: 80vw;"
            type="password"
            value="123"
          />
        </div>
        <button
          buttontype="primary"
          class="sc-ghWlax hYhlzt"
          data-testid="change-password-button"
          disabled=""
          style="margin-top: 32px; margin-bottom: 16px; width: 80vw; max-width: 320px; min-width: 200px; background-color: rgb(182, 180, 185);"
          type="submit"
        >
          Change Password
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-UblHX ZlAPB"
    >
      <div
        class="sc-fufdwm eMJCuP"
      >
        <div
          class="sc-Rjrgp eCIyui"
        >
          <div
            class="sc-blHHSb kTKyqX"
            style="font-weight: 600;"
          >
            Change password
          </div>
          <div
            class="sc-egkSDF cGFidm"
          >
            Please enter your new password to change
          </div>
        </div>
        <div
          class="sc-gtLWhw jPWJOW"
        >
          You are login as
           
          <div
            class="sc-gtLWhw jPWJOW"
            style="font-weight: bold; white-space: pre-wrap; overflow-wrap: break-word;"
          >
            email
          </div>
        </div>
      </div>
      <div
        style="margin-bottom: 12px; margin-top: 40px;"
      >
        <div
          class="sc-gtLWhw jPWJOW"
        >
          New password
        </div>
        <input
          aria-label="New password"
          class="sc-kLhKbu gjDzjv"
          placeholder="Enter your password..."
          style="min-width: 200px; border: 1px solid #858585; background-color: rgb(254, 254, 255); max-width: 320px; width: 80vw;"
          type="password"
          value="123"
        />
      </div>
      <div
        style="margin-bottom: 12px;"
      >
        <div
          class="sc-gtLWhw jPWJOW"
        >
          Confirm new password
        </div>
        <input
          aria-label="Confirm new password"
          class="sc-kLhKbu gjDzjv"
          placeholder="Enter your password..."
          style="min-width: 200px; border: 1px solid #858585; background-color: rgb(254, 254, 255); max-width: 320px; width: 80vw;"
          type="password"
          value="123"
        />
      </div>
      <button
        buttontype="primary"
        class="sc-ghWlax hYhlzt"
        data-testid="change-password-button"
        disabled=""
        style="margin-top: 32px; margin-bottom: 16px; width: 80vw; max-width: 320px; min-width: 200px; background-color: rgb(182, 180, 185);"
        type="submit"
      >
        Change Password
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ChangePasswordView renders ChangePasswordView with desktop view 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-UblHX ZlAPB"
      >
        <div
          class="sc-fufdwm eMJCuP"
        >
          <div
            class="sc-Rjrgp eCIyui"
          >
            <div
              class="sc-blHHSb kTKyqX"
              style="font-weight: 600;"
            >
              Change password
            </div>
            <div
              class="sc-egkSDF cGFidm"
            >
              Please enter your new password to change
            </div>
          </div>
          <div
            class="sc-gtLWhw jPWJOW"
          >
            You are login as
             
            <div
              class="sc-gtLWhw jPWJOW"
              style="font-weight: bold; white-space: pre-wrap; overflow-wrap: break-word;"
            >
              email
            </div>
          </div>
        </div>
        <div
          style="margin-bottom: 12px; margin-top: 40px;"
        >
          <div
            class="sc-gtLWhw jPWJOW"
          >
            New password
          </div>
          <input
            aria-label="New password"
            class="sc-kLhKbu gjDzjv"
            placeholder="Enter your password..."
            style="max-width: 320px; min-width: 200px; width: 80vw; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
            type="password"
            value="123"
          />
        </div>
        <div
          style="margin-bottom: 12px;"
        >
          <div
            class="sc-gtLWhw jPWJOW"
          >
            Confirm new password
          </div>
          <input
            aria-label="Confirm new password"
            class="sc-kLhKbu gjDzjv"
            placeholder="Enter your password..."
            style="max-width: 320px; min-width: 200px; width: 80vw; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
            type="password"
            value="12345"
          />
        </div>
        <div
          class="sc-frniUE hsGpvU"
        >
          <div
            class="sc-dntaoT cZqBTg"
          >
            Passwords do not match
          </div>
        </div>
        <button
          buttontype="primary"
          class="sc-ghWlax hYhlzt"
          data-testid="change-password-button"
          style="margin-top: 32px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw;"
          type="submit"
        >
          Change Password
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-UblHX ZlAPB"
    >
      <div
        class="sc-fufdwm eMJCuP"
      >
        <div
          class="sc-Rjrgp eCIyui"
        >
          <div
            class="sc-blHHSb kTKyqX"
            style="font-weight: 600;"
          >
            Change password
          </div>
          <div
            class="sc-egkSDF cGFidm"
          >
            Please enter your new password to change
          </div>
        </div>
        <div
          class="sc-gtLWhw jPWJOW"
        >
          You are login as
           
          <div
            class="sc-gtLWhw jPWJOW"
            style="font-weight: bold; white-space: pre-wrap; overflow-wrap: break-word;"
          >
            email
          </div>
        </div>
      </div>
      <div
        style="margin-bottom: 12px; margin-top: 40px;"
      >
        <div
          class="sc-gtLWhw jPWJOW"
        >
          New password
        </div>
        <input
          aria-label="New password"
          class="sc-kLhKbu gjDzjv"
          placeholder="Enter your password..."
          style="max-width: 320px; min-width: 200px; width: 80vw; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
          type="password"
          value="123"
        />
      </div>
      <div
        style="margin-bottom: 12px;"
      >
        <div
          class="sc-gtLWhw jPWJOW"
        >
          Confirm new password
        </div>
        <input
          aria-label="Confirm new password"
          class="sc-kLhKbu gjDzjv"
          placeholder="Enter your password..."
          style="max-width: 320px; min-width: 200px; width: 80vw; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
          type="password"
          value="12345"
        />
      </div>
      <div
        class="sc-frniUE hsGpvU"
      >
        <div
          class="sc-dntaoT cZqBTg"
        >
          Passwords do not match
        </div>
      </div>
      <button
        buttontype="primary"
        class="sc-ghWlax hYhlzt"
        data-testid="change-password-button"
        style="margin-top: 32px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw;"
        type="submit"
      >
        Change Password
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ChangePasswordView renders ChangePasswordView with mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-UblHX ZlAPB"
      >
        <div
          class="sc-fufdwm eMJCuP"
        >
          <div
            class="sc-Rjrgp eCIyui"
          >
            <div
              class="sc-blHHSb kTKyqX"
              style="font-weight: 600;"
            >
              Change password
            </div>
            <div
              class="sc-egkSDF cGFidm"
            >
              Please enter your new password to change
            </div>
          </div>
          <div
            class="sc-gtLWhw jPWJOW"
          >
            You are login as
             
            <div
              class="sc-gtLWhw jPWJOW"
              style="font-weight: bold; white-space: pre-wrap; overflow-wrap: break-word;"
            >
              email
            </div>
          </div>
        </div>
        <div
          style="margin-bottom: 12px; margin-top: 40px;"
        >
          <div
            class="sc-gtLWhw jPWJOW"
          >
            New password
          </div>
          <input
            aria-label="New password"
            class="sc-kLhKbu gjDzjv"
            placeholder="Enter your password..."
            style="min-height: 48px; min-width: 320px; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
            type="password"
            value=""
          />
        </div>
        <div
          style="margin-bottom: 12px;"
        >
          <div
            class="sc-gtLWhw jPWJOW"
          >
            Confirm new password
          </div>
          <input
            aria-label="Confirm new password"
            class="sc-kLhKbu gjDzjv"
            placeholder="Enter your password..."
            style="min-height: 48px; min-width: 320px; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
            type="password"
            value=""
          />
        </div>
        <button
          buttontype="primary"
          class="sc-ghWlax hYhlzt"
          data-testid="change-password-button"
          disabled=""
          style="margin-top: 32px; margin-bottom: 16px; width: 320px; background-color: rgb(182, 180, 185);"
          type="submit"
        >
          Change Password
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-UblHX ZlAPB"
    >
      <div
        class="sc-fufdwm eMJCuP"
      >
        <div
          class="sc-Rjrgp eCIyui"
        >
          <div
            class="sc-blHHSb kTKyqX"
            style="font-weight: 600;"
          >
            Change password
          </div>
          <div
            class="sc-egkSDF cGFidm"
          >
            Please enter your new password to change
          </div>
        </div>
        <div
          class="sc-gtLWhw jPWJOW"
        >
          You are login as
           
          <div
            class="sc-gtLWhw jPWJOW"
            style="font-weight: bold; white-space: pre-wrap; overflow-wrap: break-word;"
          >
            email
          </div>
        </div>
      </div>
      <div
        style="margin-bottom: 12px; margin-top: 40px;"
      >
        <div
          class="sc-gtLWhw jPWJOW"
        >
          New password
        </div>
        <input
          aria-label="New password"
          class="sc-kLhKbu gjDzjv"
          placeholder="Enter your password..."
          style="min-height: 48px; min-width: 320px; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
          type="password"
          value=""
        />
      </div>
      <div
        style="margin-bottom: 12px;"
      >
        <div
          class="sc-gtLWhw jPWJOW"
        >
          Confirm new password
        </div>
        <input
          aria-label="Confirm new password"
          class="sc-kLhKbu gjDzjv"
          placeholder="Enter your password..."
          style="min-height: 48px; min-width: 320px; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
          type="password"
          value=""
        />
      </div>
      <button
        buttontype="primary"
        class="sc-ghWlax hYhlzt"
        data-testid="change-password-button"
        disabled=""
        style="margin-top: 32px; margin-bottom: 16px; width: 320px; background-color: rgb(182, 180, 185);"
        type="submit"
      >
        Change Password
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ChangePasswordView renders ChangePasswordView with mobile view 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-UblHX ZlAPB"
      >
        <div
          class="sc-fufdwm eMJCuP"
        >
          <div
            class="sc-Rjrgp eCIyui"
          >
            <div
              class="sc-blHHSb kTKyqX"
              style="font-weight: 600;"
            >
              Change password
            </div>
            <div
              class="sc-egkSDF cGFidm"
            >
              Please enter your new password to change
            </div>
          </div>
          <div
            class="sc-gtLWhw jPWJOW"
          >
            You are login as
             
            <div
              class="sc-gtLWhw jPWJOW"
              style="font-weight: bold; white-space: pre-wrap; overflow-wrap: break-word;"
            >
              email
            </div>
          </div>
        </div>
        <div
          style="margin-bottom: 12px; margin-top: 40px;"
        >
          <div
            class="sc-gtLWhw jPWJOW"
          >
            New password
          </div>
          <input
            aria-label="New password"
            class="sc-kLhKbu gjDzjv"
            placeholder="Enter your password..."
            style="max-width: 320px; min-width: 200px; width: 80vw; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
            type="password"
            value="123"
          />
        </div>
        <div
          style="margin-bottom: 12px;"
        >
          <div
            class="sc-gtLWhw jPWJOW"
          >
            Confirm new password
          </div>
          <input
            aria-label="Confirm new password"
            class="sc-kLhKbu gjDzjv"
            placeholder="Enter your password..."
            style="max-width: 320px; min-width: 200px; width: 80vw; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
            type="password"
            value="123"
          />
        </div>
        <button
          buttontype="primary"
          class="sc-ghWlax hYhlzt"
          data-testid="change-password-button"
          disabled=""
          style="margin-top: 32px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw; background-color: rgb(182, 180, 185);"
          type="submit"
        >
          Change Password
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-UblHX ZlAPB"
    >
      <div
        class="sc-fufdwm eMJCuP"
      >
        <div
          class="sc-Rjrgp eCIyui"
        >
          <div
            class="sc-blHHSb kTKyqX"
            style="font-weight: 600;"
          >
            Change password
          </div>
          <div
            class="sc-egkSDF cGFidm"
          >
            Please enter your new password to change
          </div>
        </div>
        <div
          class="sc-gtLWhw jPWJOW"
        >
          You are login as
           
          <div
            class="sc-gtLWhw jPWJOW"
            style="font-weight: bold; white-space: pre-wrap; overflow-wrap: break-word;"
          >
            email
          </div>
        </div>
      </div>
      <div
        style="margin-bottom: 12px; margin-top: 40px;"
      >
        <div
          class="sc-gtLWhw jPWJOW"
        >
          New password
        </div>
        <input
          aria-label="New password"
          class="sc-kLhKbu gjDzjv"
          placeholder="Enter your password..."
          style="max-width: 320px; min-width: 200px; width: 80vw; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
          type="password"
          value="123"
        />
      </div>
      <div
        style="margin-bottom: 12px;"
      >
        <div
          class="sc-gtLWhw jPWJOW"
        >
          Confirm new password
        </div>
        <input
          aria-label="Confirm new password"
          class="sc-kLhKbu gjDzjv"
          placeholder="Enter your password..."
          style="max-width: 320px; min-width: 200px; width: 80vw; border: 1px solid #858585; background-color: rgb(254, 254, 255);"
          type="password"
          value="123"
        />
      </div>
      <button
        buttontype="primary"
        class="sc-ghWlax hYhlzt"
        data-testid="change-password-button"
        disabled=""
        style="margin-top: 32px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw; background-color: rgb(182, 180, 185);"
        type="submit"
      >
        Change Password
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
